api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patients-api
spec:
  selector:
    matchLabels:
      app: patients-api
  replicas: 2 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: patients-api
    spec:
      containers:
      - name: patients-api
        image: abruce/patients-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: patients-api
spec:
  type: ClusterIP
  selector:
    app: patients-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
